[package]
name = "subnet_calculator"
version = "0.0.2"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 16
lto = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 16
lto = true
strip = "symbols"

[dependencies]
iced = { version = "0.12.1", features = ["smol"] }
clipboard-rs = "0.1.7"